[package]
name = "wallet_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
serde_json = {version = "1.0.96"}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0.3"}

[dependencies.redis]
version = "*"
